fix overflow of color picker

--- a/base.css
+++ b/base.css
@@ -174,6 +174,7 @@ li {
 .saturation {
   height: calc(100vh - 3.125em);
   position: relative;
+  overflow: hidden;
 }
 
 .saturation-pointer {
